# whisperx

./: .gitattributes  README.md  README_zh-CN.md  debug_spacy.py  package.oo.yaml  pyproject.toml  test_english_sentence.py  test_final.py  test_generate_srt.py
flows/test-generate-srt/: .flow.ui.oo.json  flow.oo.yaml
flows/test-translate-srt/: .flow.ui.oo.json  flow.oo.yaml
flows/test-whisperx/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/generate-srt/: __init__.py  task.oo.yaml
tasks/translate-srt/: __init__.py  task.oo.yaml
tasks/whisperx-transcribe/: README.md  __init__.py  run.sh  task.oo.yaml
