[project]
name = "whisperx1"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysmavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "whisperx (>=3.3.2,<4.0.0)",
    "spacy (>=3.7.0,<4.0.0)",
    "cupy-cuda12x (>=13.6.0,<14.0.0)",
    "openai (>=2.6.1,<3.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "whisperx1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
